# aosp-create-dictionary-tools

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  main
src/: CMakeLists.txt  android_dictionary.cpp  android_dictionary.h  configuration.cpp  configuration.h  create_dictionary.cpp  create_dictionary.h  dictionary.cpp  dictionary.h  functions.cpp  functions.h  main.cpp  parsing.cpp  parsing.h  spellcheck.cpp  spellcheck.h  struct.word.h  struct.words.h  threads.cpp  threads.h  wordcount.cpp  wordcount.h
